--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "egm-state-detector"
+name = "egm-streamer"
 version = "0.1.0"
-description = "EGM Stream State Detector with ROI/ImageHash"
+description = "EGM Streamer & State Detector"
 authors = [
     {name = "Your Name", email = "your.email@example.com"},
 ]
@@ -16,7 +16,7 @@ dependencies = [
 requires-python = ">=3.9"
 
 [project.scripts]
-egm-detector = "egm_state_detector.cli:main"
+egm-streamer = "egm_streamer.cli:main"
 
 [build-system]
 requires = ["hatchling"]
