--- a/config.example.yaml
+++ b/config.example.yaml
@@ -2,6 +2,9 @@ common:
   instance_id: "egm-ipc-01"
   log_level: "INFO"
 
+# ------------------------------------------------------------------
+# Streams: Push live video/audio to RTMP server
+# ------------------------------------------------------------------
 streams:
   game:
     enabled: true
@@ -15,11 +18,12 @@ streams:
       preset: "ultrafast"
       tune: "zerolatency"
       gop: 30
-      extra_flags: []
+      extra_flags: [] # Additional FFmpeg flags if needed
       
   cam:
     enabled: true
     input_device: "/dev/video2"
+    audio_device: null # No audio for camera
     resolution: "640x480"
     fps: 30
     bitrate: "1000k"
@@ -29,30 +33,47 @@ streams:
       tune: "zerolatency"
       gop: 30
 
+# ------------------------------------------------------------------
+# Snapshot Service: Background loop for generating live preview & refs
+# ------------------------------------------------------------------
 snapshot:
-  enabled: false
+  enabled: true
   target_stream: "game"
-  output_path: "/dev/shm/latest.jpg"
-  interval: 1.0
-  quality: 2 # FFmpeg -q:v (1-31), 1=Best, 31=Worst
+  output_path: "/dev/shm/latest.jpg" # In-memory path for zero latency
+  interval: 1.0 # Update frequency (seconds)
+  quality: 2    # FFmpeg -q:v (1-31), 1=Best, 31=Worst. 2-5 is good balance.
 
+# ------------------------------------------------------------------
+# Detector: State recognition logic
+# ------------------------------------------------------------------
 detector:
-  enabled: false
-  target_stream: "game" # Analyze the game stream
+  enabled: true
+  target_stream: "game"
   
+  # Control detection processing speed
+  capture:
+    capture_interval: 0.5  # [Effective] Detection loop interval in seconds. 0.5 = 2 checks/sec.
+
+  # Parameter settings for matching algorithm
   detection:
-    algo: dhash
-    hash_size: 8
-    samples: 3
+    algo: dhash      # hash algorithm: dhash, phash, ahash
+    hash_size: 8     # size of hash (8 -> 64 bits)
+    
+    # [Currently Unused / Reserved Params]
+    # The following are for future multi-frame averaging features.
+    # Current implementation relies on single-frame capture + debounce.
+    samples: 3       
     sample_interval: 0.15
 
+  # ROI & Reference definitions
   states:
     NORMAL:
       refs_dir: "/var/lib/egm-detector/refs/normal"
+      # One or more ROIs. If required=true, it MUST match.
       rois:
         - {name: "main", x: 100, y: 200, w: 50, h: 50, required: true}
-      min_match: 1
-      threshold: 12
+      min_match: 1    # Minimum non-required ROIs to match
+      threshold: 12   # Hamming distance limit (lower = stricter)
 
     SELECT:
       refs_dir: "/var/lib/egm-detector/refs/select"
@@ -70,9 +91,10 @@ detector:
 
   priority: [SELECT, PLAYING, NORMAL]
   
+  # State Machine / Anti-noise
   debounce:
-    confirm_frames: 2
-    drop_frames: 6
+    confirm_frames: 2  # How many consecutive matches to switch state
+    drop_frames: 6     # How many frames to ignore after switch (cooldown)
     
   output:
     status_file: "/dev/shm/egm-101_detect.json"
