--- a/config.example.yaml
+++ b/config.example.yaml
@@ -74,6 +74,7 @@ detector:
       # One or more ROIs. If required=true, it MUST match.
       rois:
         - {name: "main", x: 100, y: 200, w: 50, h: 50, required: true}
+        - {name: "main", x: 100, y: 200, w: 50, h: 50, negative: true}
   
 
     SELECT:
