--- a/config.example.yaml
+++ b/config.example.yaml
@@ -74,6 +74,10 @@ detector:
       # One or more ROIs. If required=true, it MUST match.
       rois:
         - {name: "main", x: 100, y: 200, w: 50, h: 50, required: true}
+        # Negative ROI example: 
+        # If this ROI matches the reference from "PLAYING", add penalty (+100 dist)
+        # useful for excluding states based on features from another state
+        - {name: "freegame_text", x: 150, y: 80, w: 100, h: 30, negative: true, ref_state: "PLAYING"}
         - {name: "main", x: 100, y: 200, w: 50, h: 50, negative: true}
   
 
